# secure-gateway

./: .clang-format  .clang-tidy  .cproject  .cproject.backup  .excludes  .gitignore  .project  CMakeLists.txt  CMakePresets.json  Cpu0_Main.c  Cpu1_Main.c  README.cmake.md  README.md  illd_tc377tx_ads_lwip-http-server TriCore Debug (TASKING).launch  secure-gateway Debug.launch
.ads/: backup-libraries.json  clean-libraries.json  install-libraries.json  rollback-libraries.json
.ads/winIDEAWorkspaces/TriCore-Debug-(TASKING)/: ADS.xgrf  ADS.xjrf
Debug/: .d  TASKING_C_C___Compiler-Include_paths__-I_.opt  makefile  secure-gateway.hex  secure-gateway.map  secure-gateway.mdf  sources.mk
Debug/src/: Cpu0_Main.src  Cpu1_Main.src  Cpu2_Main.src  subdir.mk
boards/Secure_Gateway_V11/: board.c
cmake/: ProjectInit.cmake  tricore-gcc.toolchain
cmake/internal/: BuildPaths.cmake  BuildSettings.cmake  CCache.cmake
cmake/toolchains/: tricore-gcc.toolchain
components/serialio/: serialio.c
src/: CMakeLists.txt  Cpu0_Main.c  Cpu1_Main.c  Cpu2_Main.c  __getchar.c  __putchar.c  app.c  app.h  assert.h  can.c  can.h  config.h  isr_config.h  led.c  led.h  serial.c  serial.h  spinlock.c  spinlock.h  stm.c  stm.h  timer.c  timer.h
